
| 🎁
| Add mandatory license check to `build.sh`
| https://github.com/knative/client/pull/187[#187]

| 🎁
| Add Golang based E2E tests
| https://github.com/knative/client/pull/121[#121]

| ✨
| Rename `kn revision get` to `kn revision list`
| https://github.com/knative/client/pull/180[#180]

| ✨
| Rename `kn service get` to `kn service list`
| https://github.com/knative/client/pull/179[#179]

| ✨
| Refactoring to use sub-packages
| https://github.com/knative/client/pull/66[#66]

| 🎁
| Add `--test`, `--fast`, `--update` to `build.sh`
| https://github.com/knative/client/pull/149[#149]

| ✨️
| Update to Knative serving 0.6.0
| https://github.com/knative/client/pull/129[#129]

| 🎁
| Add Zsh completion
| https://github.com/knative/client/pull/132[#132]


| 🎁
| Add autoscale & concurrency options for `service create` and `service update` (`--min-scale`, `--max-scale`, `--concurrency-limit`, `--concurrency-target`)
| https://github.com/knative/client/pull/157[#157]

| 🎁
| Add `--watch` for `build.sh` to enter a compile-watch loop
| https://github.com/knative/client/pull/160[#160]

|===

## v0.1.0 (2019-05-17)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add --force for `service create`
| https://github.com/knative/client/pull/79[#79]

| 🐛
| Fix info messages after `service create`  and `service delete`
| https://github.com/knative/client/pull/95[#95]

| 🎁
| Add `revision get`
| https://github.com/knative/client/pull/97[#97]

| 🎁
| Add `service get`
| https://github.com/knative/client/pull/90[#90]

|===

'''
_Legend_ :  🎁 Feature - 🐛 Fix - ✨ Update - 🐣 Refactoring - 🗑️ Remove

////
---------------------------------------------
Ignore PRs:

12
45
---------------------------------------------
////

// Asciidoc Template for a new release table. Add this after creating a release
// to collect new changelog entries
////

## v0.XX.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

|===
////